[project]
name = "finance-assistant"
version = "0.1.0"
description = "Multi-Agent Financial Advisory System using Strands and AgentCore"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bedrock-agentcore>=0.1.3",
    "bedrock-agentcore-starter-toolkit>=0.1.10",
    "boto3>=1.40.26",
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "pydantic>=2.11.7",
    "strands-agents>=1.7.1",
    "strands-agents-tools>=0.2.6",
    "yfinance>=0.2.65",
]
